k8s/base/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: slack-clone
  labels:
    app: redis
    tier: cache
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
